# depfence

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  pyproject.toml
.depfence-hooks/: pre-commit
.github/workflows/: ci.yml  depfence.yml  pages.yml  publish.yml
depfence/: __init__.py  __main__.py
depfence/analyzers/: ast_analysis.py  install_script.py  typosquat_detector.py  version_diff.py
depfence/cache/: __init__.py  advisory_cache.py  download_cache.py
depfence/cli/: main.py
depfence/core/: baseline.py  dashboard.py  dep_graph.py  dep_tree.py  drift.py  engine.py  epss_client.py  epss_enricher.py  fetcher.py  fixer.py  graph_viz.py  health_dashboard.py  history.py  html_report.py  inline_suppress.py  kev_client.py  kev_enricher.py  license_compat.py  lockfile.py  models.py  monorepo.py  orchestrator.py  osv_client.py  parallel.py  policy.py  registry.py  registry_client.py  risk_scorer.py  sbom_diff.py  scan_cache.py  scan_stats.py  scorecard_client.py  scorecard_enricher.py  threat_db.py  threat_intel.py  trust_scorer.py  update_advisor.py  vuln_propagation.py  watcher.py  workspace_scanner.py
depfence/data/: license_db.json  mcp_threat_intel.json  popular_packages.json
depfence/firewall/: __init__.py  interceptor.py
depfence/integrations/: __init__.py  ci_generator.py  github_pr.py  hooks.py  pre_commit_hook.py
depfence/intel/: __init__.py  epss_tracker.py  kev_monitor.py  threat_feed.py
depfence/mcp/: __init__.py  server.py  tools.py
depfence/parsers/: cargo_lockfile.py  composer_lockfile.py  gemfile_lockfile.py  go_sum.py  gradle_lockfile.py  jvm_lockfiles.py  nuget_lockfiles.py  swift_lockfile.py
depfence/remediate/: __init__.py  pr_generator.py  strategies.py
depfence/reporters/: compliance_report.py  cyclonedx.py  github_sarif.py  json_out.py  sarif.py  sarif_out.py  spdx_out.py  table_out.py
depfence/sanitize/: __init__.py  cleaner.py  detector.py
depfence/scanners/: ai_vulns.py  behavioral.py  ci_secrets.py  depconfusion.py  dockerfile_scanner.py  freshness_scanner.py  gha_scanner.py  gha_workflow_scanner.py  license.py  license_scanner.py  mcp_fingerprint.py  mcp_scanner.py  model_integrity.py  model_scanner.py  network_scanner.py  npm_advisory.py  obfuscation.py  osv_scanner.py  ownership_scanner.py  phantom_deps.py  pinning_scanner.py  preinstall.py  provenance.py  provenance_checker.py  pypi_advisory.py  reachability.py  reputation.py  scope_scanner.py  secrets.py  secrets_scanner.py  slopsquat.py  terraform_scanner.py
depfence/simulate/: __init__.py  attacks.py  red_team.py
docs/site/: api.html  docs.html  index.html  style.css
examples/: depfence.yml
tests/: test_ai_vulns.py  test_baseline.py  test_behavioral.py  test_cache.py  test_cargo_go_parsers.py  test_ci_generator.py  test_ci_secrets.py  test_cli_integration.py  test_compliance_report.py  test_composer_parser.py  test_cyclonedx.py  test_cyclonedx_vex.py  test_dep_graph.py  test_dep_tree.py  test_depconfusion.py  test_depconfusion_enhanced.py  test_dockerfile_scanner.py  test_drift.py  test_epss.py  test_firewall.py  test_fixer.py  test_fixer_enhanced.py  test_freshness_scanner.py  test_gha_scanner.py  test_gha_workflow_scanner.py  test_github_pr.py  test_gradle_swift_parsers.py  test_graph_viz.py  test_health_dashboard.py  test_html_report.py  test_html_report_enhanced.py  test_inline_suppress.py  test_inline_suppress_integration.py  test_integration_full.py  test_intel_full.py  test_jvm_lockfiles.py  test_kev.py  test_license.py  test_license_compat.py  test_license_scanner.py  (+49 more)
